--- a/.github/workflows/oci.yml
+++ b/.github/workflows/oci.yml
@@ -11,9 +11,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Login to Docker Hub
       run: docker login --username mstg --password ${{secrets.DOCKER_SECRET}}
-    - name: Get the version
-      run: echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
     - name: Build the Docker image
-      run: docker build . -t docker.io/mstg/srpmproc:${SOURCE_TAG}
+      run: docker build . -t docker.io/mstg/srpmproc:${GITHUB_REF#refs/tags/}
     - name: Push to Docker Hub
-      run: docker push docker.io/mstg/srpmproc:${SOURCE_TAG}
+      run: docker push docker.io/mstg/srpmproc:${GITHUB_REF#refs/tags/}
