--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,13 +8,18 @@ builds:
       - CGO_ENABLED=0
     goos:
       - linux
+      - windows
       - darwin
+    goarch:
+      - amd64
+      - arm64
 archives:
   - replacements:
       darwin: Darwin
       linux: Linux
-      386: i386
+      windows: Windows
       amd64: x86_64
+      arm64: aarch64
 checksum:
   name_template: 'checksums.txt'
 snapshot:
