--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 testdata
-srpmproc
+/srpmproc
 .idea
-dist/
-dist/
+/dist/
