--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -14,6 +14,8 @@ builds:
     goarch:
       - amd64
       - arm64
+      - s390x
+      - ppc64le
 archives:
   - replacements:
       darwin: Darwin
