--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -23,7 +23,7 @@ archives:
       {{- title .Os }}_
       {{- if eq .Arch "amd64" }}x86_64
       {{- else if eq .Arch "arm64" }}aarch64
-      {{- else }}{{ .Arch }}{{ end }}{{ end -}}
+      {{- else }}{{ .Arch }}{{ end -}}
 checksum:
   name_template: 'checksums.txt'
 snapshot:
