chore: build for riscv64

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -16,6 +16,7 @@ builds:
       - arm64
       - s390x
       - ppc64le
+      - riscv64
 archives:
   - name_template: >-
       {{- .ProjectName }}_
